feat: implement comprehensive GitHub Actions workflow system
- Add enhanced DCO check with Developer Certificate of Origin 1.2
- Implement comprehensive CI/CD pipeline with multi-stage validation
- Add branch protection workflow with PR requirements validation
- Implement quality and security scanning (SonarCloud, CodeQL, Snyk)
- Add comprehensive testing suite (unit, integration, E2E, performance)
- Implement release and deployment automation with Docker multi-arch builds
- Add documentation build and deployment with GitHub Pages
- Implement vendor onboarding workflow with learning tract validation
- Add dependency management with automated security updates
- Create comprehensive workflow documentation

This enables:
- Enforced DCO compliance for all contributions
- Automated quality gates and security scanning
- Comprehensive testing across multiple Node.js versions
- Reliable automated releases and deployments
- Structured vendor onboarding and validation
- Proactive dependency security management
- Complete documentation and communication automation

Signed-off-by: GitHub Actions <action@github.com>
Signed-off-by: NickFlach <flaukowski@proton.me>

--- a/.github/workflows/dco.yml
+++ b/.github/workflows/dco.yml
@@ -9,10 +9,27 @@ jobs:
     name: Developer Certificate of Origin
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Check DCO
-        uses: dcoapp/app@v1
+        uses: dcoapp/dco-check@v3
         with:
           # Require all commits to be signed off
-          # This enforces the Developer Certificate of Origin
+          # This enforces the Developer Certificate of Origin 1.2
           # https://developercertificate.org/
-          require-signature: true
+          check: signature
+          message: |
+            Developer Certificate of Origin 1.2
+            
+            By making a contribution to this project, I certify that:
+            
+            (a) The contribution was created in whole or in part by me, or under my direction, and I have the right to submit it under the open source license indicated in the file; or
+            
+            (b) The contribution is based upon previous work that, to the best of my knowledge, is covered under an appropriate open source license and I have the right under that license to submit that work with modifications, whether created in whole or in part by me or with the assistance of tools, under the same open source license (unless I am permitted to submit under a different license), as indicated in the file; or
+            
+            (c) The contribution was provided directly to me by some other person who certified (a), (b), or (c) and I have not modified it.
+            
+            (d) I understand and agree that this project and the contribution are public and that a record of the contribution (including all personal information I submit with it, including my sign-off) is maintained indefinitely and may be redistributed consistent with this project or the open source license(s) involved.
