--- a/.github/workflows/ci-enhanced.yml
+++ b/.github/workflows/ci-enhanced.yml
@@ -66,7 +66,7 @@ jobs:
   test:
     name: Unit Tests
     runs-on: ubuntu-latest
-    needs: [lint, dco]
+    needs: lint
     services:
       postgres:
         image: postgres:15
@@ -107,6 +107,34 @@ jobs:
           fail_ci_if_error: false
 
   # ==========================================================================
+  # INTEGRATION TESTS
+  # ==========================================================================
+  integration:
+    name: Integration Tests
+    runs-on: ubuntu-latest
+    needs: [lint, test]
+    strategy:
+      matrix:
+        node-version: [18, 20, 22]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run integration tests
+        run: npm run test:integration
+        env:
+          NODE_ENV: test
+
+  # ==========================================================================
   # BUILD
   # ==========================================================================
   build:
@@ -137,30 +165,6 @@ jobs:
           retention-days: 7
 
   # ==========================================================================
-  # DOCKER BUILD
-  # ==========================================================================
-  docker:
-    name: Docker Build
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: false
-          tags: oxscada:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  # ==========================================================================
   # SECURITY SCAN
   # ==========================================================================
   security:
@@ -183,6 +187,59 @@ jobs:
       - name: Run npm audit
         run: npm audit --audit-level=high
         continue-on-error: true
+
+      - name: Run Snyk security scan
+        uses: snyk/actions/node@master
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+  # ==========================================================================
+  # DOCKER BUILD
+  # ==========================================================================
+  docker:
+    name: Docker Build
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Container Registry
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=sha,prefix={{branch}}-
+            type=raw,value=latest,enable={{is_default_branch}}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   # ==========================================================================
   # SMART CONTRACT TESTS (Optional)
@@ -207,3 +264,57 @@ jobs:
       - name: Compile contracts
         run: npx hardhat compile
         continue-on-error: true
+
+      - name: Run contract tests
+        run: npx hardhat test
+        continue-on-error: true
+
+  # ==========================================================================
+  # DEPLOYMENT (Production only)
+  # ==========================================================================
+  deploy:
+    name: Deploy to Production
+    runs-on: ubuntu-latest
+    needs: [build, test, integration, security]
+    if: github.event_name == 'release' && github.event.action == 'published'
+    environment: production
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist/
+
+      - name: Deploy to production
+        run: |
+          echo "Deploying to production..."
+          # Add deployment logic here
+          # This could involve:
+          # - Deploying to cloud infrastructure
+          # - Updating Kubernetes deployments
+          # - Notifying monitoring systems
+          # - Running smoke tests
+
+  # ==========================================================================
+  # NOTIFICATION
+  # ==========================================================================
+  notify:
+    name: Notify Results
+    runs-on: ubuntu-latest
+    needs: [dco, lint, test, integration, build, security, docker]
+    if: always()
+    steps:
+      - name: Notify on success
+        if: ${{ needs.dco.result == 'success' && needs.lint.result == 'success' && needs.test.result == 'success' && needs.build.result == 'success' }}
+        run: |
+          echo "✅ All checks passed!"
+          # Add success notification logic here
+
+      - name: Notify on failure
+        if: ${{ needs.dco.result == 'failure' || needs.lint.result == 'failure' || needs.test.result == 'failure' || needs.build.result == 'failure' }}
+        run: |
+          echo "❌ Some checks failed!"
+          # Add failure notification logic here
